# cindra

./: .gitignore  .mcp.json  CLAUDE.md  README.md  REFACTOR_CHANGES.md  REFACTOR_PLAN.md  coverage.xml  datatype_tracking.md  pyproject.toml  tox.ini  tst.py
.claude/: cindra-reference.md  settings.local.json
.claude-plugin/: marketplace.json
.claude/skills/acquisition-data-preparation/: SKILL.md
.claude/skills/explore-codebase/: SKILL.md
.claude/skills/mcp-environment-setup/: SKILL.md
.claude/skills/multi-day-config/: SKILL.md
.claude/skills/multi-day-data/: SKILL.md
.claude/skills/multi-day-processing/: SKILL.md
.claude/skills/multi-recording-configuration/: SKILL.md
.claude/skills/multi-recording-data/: SKILL.md
.claude/skills/multi-recording-processing/: SKILL.md
.claude/skills/multi-recording-results/: SKILL.md
.claude/skills/single-day-config/: SKILL.md
.claude/skills/single-day-data/: SKILL.md
.claude/skills/single-day-processing/: SKILL.md
.claude/skills/single-recording-configuration/: SKILL.md
.claude/skills/single-recording-data/: SKILL.md
.claude/skills/single-recording-processing/: SKILL.md
.claude/skills/single-recording-results/: SKILL.md
.claude/skills/suite2p-processing/: DATA_ARCHITECTURE.md  SKILL.md
.claude/skills/sun-lab-style/: PYTHON_STYLE.md  SUN_LAB_STYLE_GUIDE.md
.claude/skills/visualization/: SKILL.md
docs/source/: api.rst  conf.py  welcome.rst
envs/: cindra_dev_lin.yml  cindra_dev_lin_spec.txt  cindra_dev_osx.yml  cindra_dev_osx_spec.txt  cindra_dev_win.yml  cindra_dev_win_spec.txt  suite2p_lin.yml
notebooks/: Multi-Day Pipeline.ipynb  Multi-Day Visualization.ipynb  Single-Day Pipeline.ipynb
plugins/cindra/.claude-plugin/: plugin.json
src/cindra/: __init__.py  __init__.pyi
src/cindra/classification/: __init__.pyi  classifier.npz  classify.py  classify.pyi
src/cindra/dataclasses/: __init__.py  __init__.pyi  multi_day_configuration.py  multi_day_data.py  multi_recording_configuration.py  multi_recording_configuration.pyi  multi_recording_data.py  multi_recording_data.pyi  runtime_contexts.py  runtime_contexts.pyi  single_day_configuration.py  single_day_data.py  single_recording_configuration.py  single_recording_configuration.pyi  single_recording_data.py  single_recording_data.pyi  version.py  version.pyi
src/cindra/detection/: __init__.py  __init__.pyi  denoise.py  denoise.pyi  detect.py  detect.pyi  detect_rois.py  detect_rois.pyi  roi_statistics.py  roi_statistics.pyi  tracking.py  tracking.pyi  utils.py  utils.pyi
src/cindra/extraction/: __init__.py  __init__.pyi  colocalization.py  colocalization.pyi  deconvolve.py  deconvolve.pyi  extract.py  extract.pyi  masks.py  masks.pyi
src/cindra/gui/: __init__.py  __init__.pyi  app.py  app.pyi  binary_viewer.py  binary_viewer.pyi  constants.py  constants.pyi  data_models.py  data_models.pyi  multi_day_context.py  overlays.py  overlays.pyi  pc_viewer.py  pc_viewer.pyi  roi_viewer.py  roi_viewer.pyi  single_day_context.py  styles.py  styles.pyi  tracking_viewer.py  tracking_viewer.pyi  viewer_context.py  viewer_context.pyi  viewer_state.py  viewer_state.pyi  widgets.py  widgets.pyi
src/cindra/interface/: __init__.py  acquisition_tools.py  acquisition_tools.pyi  cli.py  cli.pyi  configuration_tools.py  configuration_tools.pyi  gui_cli.py  gui_cli.pyi  gui_mcp_server.py  gui_mcp_server.pyi  mcp_instance.py  mcp_instance.pyi  mcp_server.py  mcp_server.pyi  processing_tools.py  processing_tools.pyi  results_tools.py  results_tools.pyi
src/cindra/io/: __init__.py  __init__.pyi  binary.py  binary.pyi  combine.py  combine.pyi  context.py  context.pyi  select.py  select.pyi  tiff.py  tiff.pyi
src/cindra/pipelines/: __init__.py  __init__.pyi  multi_day.py  multi_recording.py  multi_recording.pyi  pipeline.py  pipeline.pyi  single_day.py  single_recording.py  single_recording.pyi
src/cindra/registration/: __init__.py  __init__.pyi  bidiphase_correction.py  bidiphase_correction.pyi  deformation.py  deformation.pyi  diffeomorphic.py  diffeomorphic.pyi  metrics.py  metrics.pyi  nonrigid.py  nonrigid.pyi  pyramid.py  pyramid.pyi  register.py  register.pyi  register_recordings.py  register_recordings.pyi  register_sessions.py  rigid.py  rigid.pyi  spline_grid.py  spline_grid.pyi  utils.py  utils.pyi  z_alignment.py
src/sl_suite2p/: __init__.py  cli.py  multi_day.py  pipeline.py  single_day.py  version.py
src/sl_suite2p/classification/: __init__.py  classifier.npz  classifier.py  classify.py
src/sl_suite2p/configuration/: __init__.py  base_config.py  multi_day.py  single_day.py
src/sl_suite2p/dataclasses/: __init__.py  multi_day_configuration.py  (+6 more)
tests/: conftest.py  dataclasses_configuration_test.py  dataclasses_io_test.py  dataclasses_relocation_test.py  dataclasses_test.py
tests/classification/: classify_test.py
tests/dataclasses/: configuration_test.py  data_test.py  io_test.py  relocation_test.py  runtime_contexts_test.py
tests/detection/: denoise_test.py  detect_extended_test.py  detect_plane_test.py  detect_rois_extended_test.py  detect_rois_test.py  detect_test.py  roi_statistics_test.py  track_rois_test.py  tracking_extended_test.py  tracking_test.py  utils_test.py
tests/extraction/: colocalization_test.py  deconvolve_test.py  extract_extended_test.py  extract_multi_recording_test.py  extract_test.py  extract_traces_test.py  masks_test.py
tests/io/: binary_extended_test.py  binary_test.py  combine_planes_test.py  combine_test.py  context_test.py  convert_tiffs_test.py  raw_test.py  resolve_contexts_test.py  save_test.py  select_extended_test.py  select_recording_rois_test.py  select_test.py  tiff_test.py
tests/pipelines/: multi_recording_pipeline_test.py  single_recording_pipeline_test.py
tests/registration/: bidiphase_correction_test.py  compute_pc_metrics_test.py  deformation_test.py  diffeomorphic_test.py  metrics_test.py  nonrigid_test.py  pyramid_test.py  register_plane_test.py  register_recordings_integration_test.py  register_recordings_test.py  register_test.py  rigid_test.py  spline_grid_test.py  utils_test.py
(+199 files in other folders)
