# Defines the build system used for the project.
[build-system]
requires = ["hatchling>=1,<2"]
build-backend = "hatchling.build"

# Project metadata section. Provides the general ID information about the project.
[project]
name = "cindra"
version = "1.1.0"
description = "Provides pipelines for processing neural imaging data and tracking Regions of Interest across multiple recordings."
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.14,<3.15"
authors = [
    { name = "Ivan Kondratyev" },
    { name = "Natalie Yeung" },
]
maintainers = [
    { name = "Ivan Kondratyev", email = "ik278@cornell.edu" },
]

keywords = [
    "calcium-imaging",
    "two-photon",
    "one-photon",
    "neural-imaging",
    "roi-detection",
    "motion-correction",
    "spike-deconvolution",
    "neuroscience",
    "fluorescence",
    "cell-tracking",
]

classifiers = [
    # Development status
    "Development Status :: 5 - Production/Stable",
    # Intended audience and project topic
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    # Supported Python Versions
    "Programming Language :: Python :: 3.14",
    # Supported Operating Systems
    "Operating System :: OS Independent",
    # Typing
    "Typing :: Typed",
]

# Runtime project dependencies.
dependencies = [
    # Numerical and Scientific Computing
    "numpy>=2,<3",
    "numba>=0.64,<1",
    "scipy>=1,<2",
    "scikit-learn>=1,<2",
    "threadpoolctl>=3,<4",
    "natsort>=8,<9",

    # Image I/O
    "tifffile>=2026,<2027",
    "imagecodecs>=2026,<2027",

    # Visualization
    "matplotlib>=3,<4",

    # GUI
    "pyside6>=6,<7",
    "pyqtgraph>=0,<1",

    # CLI and MCP Server
    "click>=8,<9",
    "mcp>=1,<2",
    "httpx>=0.28,<1",

    # Ataraxis
    "ataraxis-time>=6,<7",
    "ataraxis-base-utilities>=6,<7",
    "ataraxis-data-structures>=6,<7",

    # Runtime Utilities
    "pyyaml>=6,<7",
    "filelock>=3,<4",
    "importlib_metadata>=9,<10",

    # Platform-Specific Acceleration
    "tbb4py>=2023,<2024; sys_platform != 'darwin'",
    "intel-cmplr-lib-rt>=2026,<2027; sys_platform != 'darwin'",
]

[project.urls]
Homepage = "https://github.com/Sun-Lab-NBB/cindra"
Documentation = "https://cindra-api-docs.netlify.app/"

# All interactions with the library are performed via the 'cindra' and 'cindra-gui' CLI commands.
[project.scripts]
cindra = "cindra.interface.cli:cindra_cli"          # Top-level CLI group
cindra-gui = "cindra.interface.gui_cli:cindra_gui"  # GUI launcher (separate to avoid loading Qt during headless runs)

# Development dependencies (PEP 735). Not published to PyPI.
[dependency-groups]
dev = [
    # Tox
    "tox>=4,<5",
    "uv>=0,<1",
    "tox-uv>=1,<2",

    # Development Automation
    "ataraxis-automation>=8,<9",

    # Types
    "scipy-stubs>=1,<2",
]

# Specifies files that should not be included in the source-code distribution.
[tool.hatch.build.targets.sdist]
exclude = [".github", "recipe"]

# Specifies the library structure.
[tool.hatch.build.targets.wheel]
packages = ["src/cindra"]

# Ruff Configuration.
[tool.ruff]
line-length = 120         # Deviates from the commonly used '80' standard.
indent-width = 4          # Same as black, indents are 4 spaces
target-version = "py314"  # Targets the lowest supported version of python
src = ["src"]             # The name of the root source code directory

# Excludes 'service' .py files, such as the sphinx configuration file, from linting.
extend-exclude = ["conf.py"]

# Checks for all potential violations and uses the exclusions below to target-disable specific ones.
lint.select = ["ALL"]

# General ignore directives
lint.ignore = [
    "W291",    # Conflicts with docstring formatting
    "W293",    # Conflicts with UI style formatting
    "C901",    # Sometimes complex functions are necessary
    "PLR0913", # Sometimes complex functions are necessary
    "PLR0912", # Sometimes complex functions are necessary
    "PLR0915", # Sometimes complex type definitions are necessary
    "PLR0911", # Sometimes complex return graphs are necessary
    "FBT001",  # UI elements require the use of positional boolean values
    "FBT002",  # UI elements require the use of positional boolean values
    "FBT003",  # UI elements require the use of positional boolean values
    "TID252",  # Conflicts with the cindra import strategy
    "SLF001",  # Sometimes accessing private members is necessary
    "SIM115",  # Sometimes it is necessary to open and close files without the context manager
    "BLE001",  # Catching blind exceptions is necessary for the functioning of this library
    "COM812",  # Conflicts with the formatter
    "ISC001",  # Conflicts with the formatter
    "PT001",   # https://github.com/astral-sh/ruff/issues/8796#issuecomment-182590771
    "PT023",   # https://github.com/astral-sh/ruff/issues/8796#issuecomment-1825907715
    "D107",    # __init__ is documented inside the main class docstring where applicable
    "D205",    # Bugs out for file descriptions
    "PLW0603", # While global statement usage is not ideal, it streamlines certain development patterns
]

# Additional formatting configurations
[tool.ruff.format]
quote-style = "double"             # Uses double quotes for strings
indent-style = "space"             # Uses space for indents
skip-magic-trailing-comma = false  # Like black, ignores trailing commas
line-ending = "auto"               # Automatically detects and standardizes line-ending character

# Docstrings and comments' line length
[tool.ruff.lint.pycodestyle]
max-doc-length = 120  # Maximum documentation line length, the same as code

# Docstrings style
[tool.ruff.lint.pydocstyle]
convention = "google"

# Additional, file-specific 'ignore' directives
[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = [
    "F401", # Imported but unused
    "F403", # Wildcard imports
]
"**/tests/**/*.py" = [
    "ANN",     # Type annotations not required in tests
    "D",       # Docstring enforcement relaxed in tests
    "INP001",  # Tests use implicit namespace packages
    "PLR2004", # Magic values common in test assertions
    "PT006",   # Parametrize argument name style
    "S101",    # Assert statements standard in tests
    "SLF001",  # Private member access for testing internals
    "T201",    # Print statements allowed in tests
]

[tool.ruff.lint.isort]
case-sensitive = true              # Takes case into account when sorting imports
combine-as-imports = true          # Combines multiple "as" imports for the same package
force-wrap-aliases = true          # Wraps "as" imports so that each uses a separate line
force-sort-within-sections = true  # Forces "as" and "from" imports to be close together
length-sort = true                 # Places shorter imports first

# MyPy configuration section.
[tool.mypy]
disallow_untyped_defs = true # Enforces function annotation
warn_unused_ignores = true   # Warns against using 'type: ignore' for packages with type stubs

exclude = [
    "cindra-\\d+",         # Ignores temporary folder created by setuptools when building the sdist
    "venv.*/",             # Ignores virtual environments
    "build/",              # Ignores the sdist directory
    "dist/",               # Ignores the wheel directory
    "docs/",               # Ignores the sphinx / doxygen directory
    "stubs/",              # Ignores stubs directory (stubgen output target)
    "recipe/",             # Ignores recipe directory (grayskull output target)
    "tests/",              # Ignores the test directory.
]

# Numba ships a py.typed marker, but its bundled annotations do not model prange as an iterable or expose runtime
# config attributes such as THREADING_LAYER. Treats the package as untyped so the JIT-compiled modules type-check
# against their actual runtime behavior rather than the incomplete bundled annotations.
[[tool.mypy.overrides]]
module = ["numba", "numba.*"]
follow_imports = "skip"        # Treats all symbols imported from numba as untyped (Any)
ignore_missing_imports = true  # Suppresses missing-stub errors for the skipped package

# Pytest configuration section.
[tool.pytest.ini_options]
addopts = "--import-mode=importlib"

# Silences SciPy's catastrophic-cancellation precision-loss warning, which fires when skewness is computed for the
# near-constant fluorescence traces generated by the extraction test fixtures. The flatness is intentional in the
# fixtures and does not indicate a defect in extract.py (_update_roi_extraction_statistics).
filterwarnings = [
    "ignore:Precision loss occurred in moment calculation:RuntimeWarning",
]

# This is used by the 'test' tox tasks to aggregate coverage data produced during pytest runtimes.
[tool.coverage.run]

# Measures branch coverage in addition to statement coverage, so that partial branches (one side of a conditional or
# loop that no test exercises) are reported as gaps rather than hidden behind full line coverage.
branch = true

# Excludes GUI and interface modules from coverage measurement. GUI modules require PySide6/PyQtGraph runtime and
# cannot be meaningfully unit tested. Interface modules (CLI, MCP servers, MCP tools) require external infrastructure.
omit = [
    "src/cindra/gui/*",
    "src/cindra/interface/*",
    "*/cindra/gui/*",
    "*/cindra/interface/*",
]

[tool.coverage.paths]

# Maps coverage measured in any environment's site-packages (the tox test venv or the conda dev environment) back to
# the source files in src, so data combined from either install location resolves to a single canonical path
source = ["src/", "*/site-packages/"]

# Same as above, specifies the output directory for the coverage .html report
[tool.coverage.html]
directory = "reports/coverage_html"

# Specifies additional ignore directives
[tool.coverage.report]
omit = ["src/cindra/gui/*", "src/cindra/interface/*"]

# Fails the coverage report if combined statement and branch coverage drops below 100%, locking in full coverage of all
# measured modules and preventing regressions. GUI and interface modules are omitted above; pragma-excluded lines
# (Numba JIT bodies and pipeline orchestration entry points) do not count against this threshold.
fail_under = 100
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __del__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
]
